@@ -1,3 +1,9 @@
+2013-01-03  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55855
+	* gfortran.dg/assignment_1.f90: Modified.
+	* gfortran.dg/assignment_4.f90: New.
+
 2013-01-03  David Edelsohn  <dje.gcc@gmail.com>
 
 	* gcc.dg/torture/tls/tls-reload-1.c: Add tls options.
